samples/_failures_safe/1761557157_a531b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c903f9d5.c: In function ‘main’:
./samples/SAFE/__tmp_c903f9d5.c:172:23: error: expected ‘;’ at end of input
  172 |                 result
      |                       ^
      |                       ;
./samples/SAFE/__tmp_c903f9d5.c:172:17: error: expected declaration or statement at end of input
  172 |                 result
      |                 ^~~~~~
./samples/SAFE/__tmp_c903f9d5.c:172:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c903f9d5.c:172:17: error: expected declaration or statement at end of input
